<resources>
    <string name="app_name">RoadMentor</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">home</string>
    <string name="user">user</string>
    <string name="leaderboards">leaderboards</string>
    <string name="unit">Unit</string>
    <string name="lesson">Lesson</string>
    <string name="settings">Settings</string>
    <string name="your_profile">Your profile</string>
    <string name="do_you_want_to_be_a_teacher">Do you want to be a teacher?</string>
    <string name="name_2">Name:</string>
    <string name="search">search</string>
    <string name="home_page">Home Page</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="sms_verification">Sms verification</string>
    <string name="please_enter_the_code_that_we_have_sent_you_in_sms">PLease enter the code that we have sent you in SMS.</string>
    <string name="give_some_information_about_you">Give some information about you:</string>
    <string name="pick_a_city">Pick a city</string>
    <string name="how_much_do_you_take_per_lesson">How much do you take per lesson?</string>
    <string name="choose_the_licenses_that_you_teach">choose the licenses that you teach</string>
    <string name="next">next</string>
    <string name="per_lesson">" per lesson."</string>
    <string name="finished_lessons">Finished lessons</string>
    <string name="change_profile">Change Profile</string>
    <string name="lesson_price">Lesson Price</string>
    <string name="save">save</string>
    <string name="info">Info</string>
    <string name="get_code">get code</string>
    <string name="type_here">Message</string>
    <string name="personal_info">Personal Info</string>
    <string name="couldn_t_find_a_teacher">Couldn\'t find a teacher.</string>
    <string name="chats">Chats</string>
    <string name="about_the_teacher">About the Teacher:</string>
    <string name="reviews">Reviews:</string>

    <string-array name="cities">
        <item>ירושלים והסביבה</item>
        <item>תל אביב-יפו</item>
        <item>חיפה</item>
        <item>ראשון לציון</item>
        <item>פתח תקווה</item>
        <item>אשדוד</item>
        <item>נתניה</item>
        <item>באר שבע</item>
        <item>בני ברק</item>
        <item>חולון</item>
        <item>רמת גן</item>
        <item>רחובות</item>
        <item>אשקלון</item>
        <item>בית שמש</item>
        <item>בת ים</item>
        <item>כפר סבא</item>
        <item>הרצליה</item>
        <item>חדרה</item>
        <item>מודיעין- מכבים- רעות</item>
        <item>לוד</item>
        <item>מודיעין עילית</item>
        <item>נצרת</item>
        <item>רמלה</item>
        <item>רעננה</item>
        <item>רהט</item>
        <item>ראש העין</item>
        <item>הוד השרון</item>
        <item>ביתר עילית</item>
        <item>גבעתיים</item>
        <item>קריית אתא</item>
        <item>נהריה</item>
        <item>קריית גת</item>
        <item>אום אל-פחם</item>
        <item>עפולה</item>
        <item>אילת</item>
        <item>נס ציונה</item>
        <item>עכו</item>
        <item>אלעד</item>
        <item>יבנה</item>
        <item>רמת השרון</item>
        <item>כרמיאל</item>
        <item>טבריה</item>
        <item>קריית מוצקין</item>
        <item>טייבה</item>
        <item>שפרעם</item>
        <item>נוף הגליל</item>
        <item>קריית ביאליק</item>
        <item>קריית אונו</item>
        <item>קריית ים</item>
        <item>נתיבות</item>
        <item>מעלה אדומים</item>
        <item>אור יהודה</item>
        <item>צפת</item>
        <item>דימונה</item>
        <item>טמרה</item>
        <item>אופקים</item>
        <item>סחנין</item>
        <item>באקה אל-גרבייה</item>
        <item>יהוד-מונוסון</item>
        <item>שדרות</item>
        <item>באר יעקב</item>
        <item>גבעת שמואל</item>
        <item>ערד</item>
        <item>טירה</item>
        <item>עראבה</item>
        <item>כפר יונה</item>
        <item>מגדל העמק</item>
        <item>קריית מלאכי</item>
        <item>כפר קאסם</item>
        <item>טירת כרמל</item>
        <item>יקנעם עילית</item>
        <item>נשר</item>
        <item>קלנסווה</item>
        <item>קריית שמונה</item>
        <item>מעלות- תרשיחא</item>
        <item>אריאל</item>
        <item>אור עקיבא</item>
        <item>בית שאן</item>
    </string-array>

    <string-array name="licenses_en">
        <item>Manual Car</item>
        <item>Automatic Car</item>
        <item>Tractor</item>
        <item>Public Transport</item>
        <item>Motorcycle</item>
        <item>Heavy Truck</item>
        <item>Light Truck</item>
    </string-array>

    <string-array name="licenses_he">
        <item>רכב ידני</item>
        <item>רכב אוטומטי</item>
        <item>טרקטור</item>
        <item>רכב ציבורי</item>
        <item>אופנוע</item>
        <item>משא כבד</item>
        <item>משא קל</item>
    </string-array>
</resources>