<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main"
    android:gravity="center"
    tools:context=".activities.SignInActivity">


        <LinearLayout
            android:id="@+id/ll_showProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="4dp"
            android:visibility="gone"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="@dimen/_30ssp"
                android:fontFamily="@font/feather_bold"
                android:layout_margin="20dp"
                android:textColor="@color/black_text_color"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:textColorHint="@color/gray_text_color"
                app:hintTextColor="@color/gray_text_color"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_emailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/feather_bold"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/fade_white"
                    android:textCursorDrawable="@drawable/cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                android:textColorHint="@color/gray_text_color"
                app:hintTextColor="@color/gray_text_color"
                app:boxStrokeWidthFocused="0dp"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_passwordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/feather_bold"
                    android:singleLine="true"
                    android:textColorHint="@color/fade_white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textColor="@color/white"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_purple"
                android:layout_margin="8dp"
                android:text="@string/sign_in"
                android:fontFamily="@font/feather_bold"
                app:cornerRadius="10dp"
                android:textColor="@color/white"
                android:paddingVertical="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="?android:attr/listDivider" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="16sp"
                    android:fontFamily="@font/feather_bold"
                    android:textColor="@color/gray_text_color"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/feather_bold"
                    android:textColor="@color/gray_text_color"
                    android:text="@string/don_t_have_an_account"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_goToSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:padding="0dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/background_purple"
                    android:fontFamily="@font/feather_bold"/>

            </LinearLayout>


        </LinearLayout>

</LinearLayout>