<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    tools:context=".fragments.UserSettingsFragment">

    <LinearLayout
        android:id="@+id/ll_progressBar"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/tab_indicator"
            android:backgroundTint="@color/background_dark"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/background_purple"
                app:cardCornerRadius="1000dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardCornerRadius="1000dp">

                    <ImageView
                        android:id="@+id/iv_profileImage"
                        android:layout_width="@dimen/_48sdp"
                        android:layout_height="@dimen/_48sdp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/proxy" />

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/feather_bold"
                    android:text="Elazar Halperin"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:id="@+id/tv_signUpDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="match the second"
                    android:textColor="@color/gray_text_color"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_studentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/viewParent.headerText.settingsMiniTitle"
                android:layout_gravity="center"
                android:text="@string/personal_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/teaching"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/black_text_color"
                    android:fontFamily="@font/feather_bold"
                    android:paddingHorizontal="2dp"
                    android:paddingVertical="4dp"
                    android:text="@string/finished_lessons" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal">
                    <!-- in home add 3 buttons |- 2 +|-->

                    <Button
                        android:id="@+id/btn_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/background_purple"
                        android:background="@drawable/button_background_left"
                        android:fontFamily="@font/feather_bold"
                        android:text="-"/>
                    <TextView
                        android:id="@+id/tv_finishedLessons"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="10dp"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:translationZ="2dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/feather_bold"
                        android:background="@color/background_purple"
                        android:text="0"/>
                    <Button
                        android:id="@+id/btn_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background_left"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:rotationY="180"
                        android:textColor="@color/white"
                        android:fontFamily="@font/feather_bold"
                        app:backgroundTint="@color/background_purple"
                        android:text="+"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/dark_mode"/>

        <Switch
            android:id="@+id/darkModeSwitch"
            style="@style/settingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_dark_mode"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/dark_mode" />


        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/profile"/>

        <TextView
            android:id="@+id/tv_editProfile"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_edit_profile"
            android:focusable="true"
            android:fontFamily="@font/feather_bold"
            android:paddingHorizontal="2dp"
            android:paddingVertical="4dp"
            android:text="@string/edit_profile" />


        <TextView
            android:id="@+id/tv_changePassword"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_edit_password"
            android:focusable="true"
            android:paddingHorizontal="2dp"
            android:paddingVertical="4dp"
            android:text="@string/change_password" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/regional"/>
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/tv_language"
                style="@style/viewParent.headerText.settingsTextIcon"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_languages"
                android:focusable="true"
                android:paddingHorizontal="2dp"
                android:paddingVertical="4dp"
                android:text="@string/language" />

            <RadioGroup
                android:id="@+id/rg_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="English" />
                <RadioButton

                    android:id="@+id/rb_hebrew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hebrew" />
            </RadioGroup>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_logOut"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_logout"
            android:focusable="true"
            android:paddingHorizontal="2dp"
            android:paddingVertical="4dp"
            android:text="@string/logout" />


        <TextView
            android:id="@+id/tv_appVersion"
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:gravity="center"
            android:text="App ver 2.0.1" />

    </LinearLayout>


</LinearLayout>